## pyproject.toml file for setuptools
[build-system]
requires = ["setuptools", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtenn"
dynamic = ["version"]
authors = [
    {name = "Benjamin Kaminow", email = "benjamin.kaminow@choderalab.org"}
]
description = "Modular Training and Evaluation of Neural Networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha"
]
urls = {github = "https://github.com/choderalab/mtenn/"}
dependencies = []

[tool.setuptools.packages.find]
exclude = ["mtenn.tests"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"